# OOP_labs_3t

./: README.md
lab_01/: CMakeLists.txt  README.md  main.cpp  tests.cpp
lab_01/src/: function.cpp  function.h  main.cpp
lab_02/: CMakeLists.txt  README.md  main.cpp  test.cpp
lab_02/src/: eleven.cpp  eleven.h
lab_03/: CMakeLists.txt  README.md  main.cpp  test.cpp
lab_03/scr/: Array.cpp  Figure.cpp  Figure.h  Point.cpp  Point.h  Rectangle.h
lab_03/src/: Array.h  Rectangle.cpp  Square.cpp  Square.h  Triangle.cpp  Triangle.h
lab_04/: CMakeLists.txt  main.cpp  test.cpp
lab_04/scr/: Array.h  Figure.h  Rectangle.h  Square.h  Triangle.h
lab_04/src/: Figure.h  Rectangle.h  Triangle.h
lab_05/: README.md
lab_05/scr/: CMakeLists.txt  main.cpp  test.cpp
lab_05/scr/include/: 2w_list.h  allocator.h
lab_05/src/: main.cpp  test.cpp
lab_05/src/include/: 2w_list.h  allocator.h
lab_06/: CMakeLists.txt  README.md  main.cpp  test.cpp
lab_06/src/: dragon.cpp  dragon.hpp  druid.cpp  druid.hpp  elf.cpp  elf.hpp  fac.cpp  npc.cpp  npc.hpp
lab_07/: CMakeLists.txt  README.md  main.cpp
lab_07/src/: dragon.cpp  dragon.hpp  druid.cpp  druid.hpp  elf.cpp  elf.hpp  fac.hpp  npc.cpp  npc.hpp  observer.hpp
